2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)

	For Debian Bug #39542:
	* automake.texi (Invoking Automake, Optional): Document how
	AC_CONFIG_AUX_DIR interacts with missing files.

2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/DisjConditions.pm (_permutations_worker)
	(permutations): Remove, so that people aren't tempted to use it.
	* lib/Automake/tests/DisjConditions.pl (tests_permutations): Remove.

	* automake.in (variable_conditions_recursive): Remove.
	(variable_conditionally_defined): Rewrite using
	traverse_variable_recursively.

	* automake.in (traverse_variable_recursively,
	traverse_variable_recursively_worker): Pass one merged Condition
	instead of a stack of conditions to &FUN_STORE and &FUN_COLLECT.
	(transform_variable_recursively, define_objects_from_sources)
	(handle_lib_objects, variable_conditions_recursive): Adjust usage.

2003-02-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_lib_objects): Compute _DEPENDENCIES variables
	using transform_variable_recursively instead of
	variable_conditions_recursive and variable_value_as_list_recursive
	to avoid combinatorial explosion.
	(handle_lib_objects_cond): Merge into handle_lib_objects.
	* tests/cond11.test: Don't grep internal details in Makefile.in,
	run $MAKE to make sure the resulting Makefile runs as expected.
	* tests/cond29.test: Also exercise conditional _LDADD.
	* tests/cond31.test, tests/cond32.test: New files.
	* tests/Makefile.am (TESTS): Add tests/cond31.test and
	tests/cond32.test.

2003-01-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_lib_objects_cond): Ignore -dlopen and
	-dlpreopen in _LIBADD variables too.
	(handle_LIBOBJS, handle_ALLOCA): New functions, extracted from
	handle_lib_objects_cond.
	* tests/libtool7.test: New file.
	* tests/Makefile.am (TESTS): Add libtool7.test.

	* automake.texi (Program and Library Variables): Clarify that
	_LIBADD is for libraries and _LDADD for programs.
