@@ -1,3 +1,10 @@
+2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_programs): Strip $(EXEEXT) before
+	calling &check_canonical_spelling.
+	* tests/exeext.test: Make sure we don't use a
+	maude3__EXEEXT__OBJECTS variable.
+
 2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)
 
 	For Debian Bug #39542:
